[package]
name = "rs-operator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["native-tls", "kubederive", "ws", "latest", "runtime"]
kubederive = ["kube/derive"]
native-tls = ["kube/client", "kube/native-tls"]
rustls-tls = ["kube/client", "kube/rustls-tls"]
runtime = ["kube/runtime"]
ws = ["kube/ws"]
latest = ["k8s-openapi/v1_22"]
deprecated = ["kube/deprecated-crd-v1beta1", "k8s-openapi/v1_21"]

[dependencies]
tokio = { version = "1", features = ["full"] }
kube = { version = "0.64.0", features = ["runtime","derive"] }
k8s-openapi = { version = "0.13.1", default-features = false, features = ["v1_22"] }
serde = "1.0"
serde_json = "1.0"
futures = "0.3.17"
anyhow = "1.0.44"
schemars = "0.8.8"
tracing = "0.1.26"
tracing-subscriber = { version = "0.3.1", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.16.0"
thiserror = "~1.0"

